--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,3 +7,4 @@ search: false
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+@import "compact_img_intro"; // custom partials
